intermediate revision - updated README and added translating http://github.com" links to "https://raw.githubusercontent.com/" for rendering - size is not patched yet